--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-﻿################################################################################
-# Ten plik .gitignore został utworzony automatycznie przez Microsoft(R) Visual Studio.
-################################################################################
-
-/Grafy1.1/.vs/Grafy1.1/v16
+﻿/Grafy1.1/.vs/Grafy1.1/v16
+*.o
+sgraph
